[package]
name = "set-domeneshop-dns-ip-pointer"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.34", features = ["derive", "env"] }
dialoguer = "0.11.0"
dirs = "6.0.0"
dotenvy = { version = "0.15.7", features = ["clap"] }
pnet = "0.35.0"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
